--- a/style.css
+++ b/style.css
@@ -1,17 +1,53 @@
-.container{
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 300px;
-    margin: auto;
-    background-color: aliceblue;
-    padding: 20px;
-    border-radius: 10px;
+
+}
+
+.background{
+width: 60vw;
+height: 100vh;
+background-image: url('https://www.tudosobrechurrasco.com.br/wp-content/uploads/2018/11/aprenda-a-fazer-um-churrasco-em-casa-para-50-pessoas.jpg');
+background-position: center;
+background-size: cover;
+}
+
+.container{
+    
+    width: 40vw;
+    height: calc(100vh - 60px);
+    background-color: #ffe65f;
+    display: flex;
+    padding-top: 60px;
+    align-items: center;
+    flex-direction: column;
+    gap: 15px;
+    
 
 }
 
 input{
-    width: 100%;
+    width: 60%;
+    height: 40px;
     display: block;
     padding: 5px;
     box-sizing: border-box;
     margin-bottom: 10px;
+    border: 2px solid #d1bc42;
+    outline-color: #8b8354 ;
+}
+
+button{
+    font-size: 1.1rem;
+    padding-inline: 50px;
+    padding-block: 6px;
+    border: 0;
+    border-radius: 20px;
+}
+button:hover{
+    background-color:black;
+    color: #ffe65f;
+    
 }
